# gpt2vec

./: pyproject.toml  setup_vast.sh
notebooks/: gemma_test.ipynb  peft_test.ipynb  test.ipynb
scripts/: train.py
sequence_labeling/ner-uk-2/: test.ipynb  token_mdberta.ipynb  word_mdeberta.ipynb
sequence_labeling/unlp-2025/gemma/: bi-gemma-mlm-eng.ipynb  bi-gemma-mlm-ukr.ipynb  bi-gemma-mntp-eng.ipynb  bi-gemma-mntp-ukr.ipynb  bi-gemma-no-pretrain.ipynb
sequence_labeling/unlp-2025/llama/: bi-llama-mlm-eng.ipynb  bi-llama-mlm-ukr.ipynb  bi-llama-mntp-eng.ipynb  bi-llama-mntp-ukr.ipynb  bi-llama-no-pretrain.ipynb  llama.ipynb
src/gpt2vec/callbacks/: directionality.py  partial_grad_norm.py  uter.py
src/gpt2vec/losses/: losses.py
src/gpt2vec/metrics/: directionality.py  uter.py
src/gpt2vec/metrics/attention_geometry/: README.md  scores.py  utils.py
src/gpt2vec/models/: __init__.py  gemma3.py  llama.py
src/gpt2vec/models/bi_llama/: __init__.py  configuration_bi_llama.py  modeling_bi_llama.py
src/gpt2vec/utils/: other.py
