[project]
name = "gpt2vec"
version = "0.1.0"
description = "Packages for GPT2Vec"
requires-python = "==3.12.*"

dependencies = [
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "hydra-core>=1.3.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kaggle>=1.8.3",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "omegaconf>=2.3.0",
    "pandas>=3.0.0",
    "peft>=0.18.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "seqeval>=1.2.2",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "transformers<5.0.0",
    "wandb>=0.24.0",
]


[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gpt2vec"
module-root = "src"


[tool.uv]
keyring-provider = "subprocess"
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin'",
]
extra-index-url = ["https://pypi.nvidia.com"]

# Configure PyTorch to use CUDA 12.8 wheels
[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform != 'darwin'" }]  # Use pypi for mac

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
